--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,12 @@
 body {
-  border: 2px solid rgb(0, 0, 0);
+  border: 4px solid rgb(154, 76, 173);
+  margin: 40px auto;
+  padding: 20px;
+  border-radius: 10px;
+  border-style: groove;
+  position: relative;
+  top: 200px;
+  max-width: 600px;
 }
 
 ul {
